# hs_theoretische_informatik

./: CMakeLists.txt
E_II/: E_II.txt
E_III/: E_III.txt
E_IV/: E_IV.txt
E_V/: E_V.txt
Goedeler/: .gitignore  CMakeLists.txt
Goedeler/GOE/: hello_world.cpp  main.cpp
Turingmaschine/: CMakeLists.txt  main.cpp  turingmaschine.manifest
Turingmaschine/TM/: 2x+y.tm  add1.tm
